k8s/student-app-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-api
spec:
  selector:
    app: student-app-api
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
