k8s/student-app-ingress.yaml
apiVersion: networking.k8s.io/v1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: student-app-ingress
spec:
  rules:
  - http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: student-app-api
              port:
                number: 80
